welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:16: error: not enough arguments for method marquerSol: (c: java.awt.Color)Unit.
Unspecified value parameter c.
for (j <- 0 to h-2) {gauche();avance();droite();recule(h);marquerSol()
                                                                    ^